# cline-test-proj

./: .clinerule  .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  auth.py
backend/app/core/: __init__.py
backend/app/models/: __init__.py
frontend/: .env.example  package-lock.json  package.json
frontend/components/: Footer.js  Layout.js  Navbar.js
frontend/pages/: _app.js  index.js
frontend/pages/api/auth/: [...nextauth].js
frontend/pages/auth/: error.js  signin.js
frontend/styles/: globals.css
